--- a/styles/Responsive.css
+++ b/styles/Responsive.css
@@ -40,7 +40,11 @@
         font-size: 14px;
     }
 
-    h1, h2, h3, h4 {
+    h1 {
+        font-size: 1.6rem;
+    }
+
+    h2, h3, h4 {
         font-size: 1.4rem;
     }
 
