--- a/styles/Responsive.css
+++ b/styles/Responsive.css
@@ -56,6 +56,10 @@
         font-size: 0.9rem;
         padding: 10px 18px;
     }
+
+    .titulo-video h2 {
+        font-size: 3.5rem;
+    }
 }
 
 @media(max-width: 645px) {
