--- a/styles/Responsive.css
+++ b/styles/Responsive.css
@@ -57,6 +57,10 @@
         padding: 10px 18px;
     }
 
+    .titulo-video {
+        text-align: center;
+    }
+
     .titulo-video h2 {
         font-size: 2.4rem;
     }
