--- a/styles/footer.css
+++ b/styles/footer.css
@@ -14,9 +14,10 @@
 }
 
 .footer-central img {
-  width: 150px;
-  height: auto;
-  margin: 20px 0;
+  width: 300px;
+  height: 300px;
+  margin: 5px 0;
+  cursor: pointer;
 }
 
 .footer-central p {
