--- a/styles/Responsive.css
+++ b/styles/Responsive.css
@@ -69,6 +69,10 @@
     .carrossel-container {
         gap: 20px;
     }
+
+    .secao-dupla {
+        padding: 5px;
+    }
 }
 
 @media(max-width: 645px) {
